--- a/custom.css
+++ b/custom.css
@@ -85,18 +85,18 @@ header .navbar{
     padding-left: 10px;
 }
 
-.products-container {
+.cart-container {
     justify-content: space-around;
     margin: 100px 100px 0;
 }
 
-.products-container ion-icon {
+.cart-container ion-icon {
     font-size: 25px;
     color: #405f33;
     /* margin-top: 60px; */
 }
 
-.product-header {
+.cart-header {
     max-width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -104,7 +104,7 @@ header .navbar{
     border-bottom: 3px solid #405f33;
 }
 
-.product-title {
+.cart-products {
     min-width: 45%;
     /* padding-left: 25px; */
 }
@@ -175,14 +175,113 @@ header .navbar{
     /* text-align: right; */
 }
 .btn-checkout {
+    font-weight: bold;
     background-color: #405f33;
-    padding: 10px;
+    padding: 8px;
     color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     border-color: #405f33;
 }
 
 .btn-checkout:hover {
     background-color: #f33f3f;
     border-color: #f33f3f;
+}
+
+@media (max-width: 992px) {
+    .cart-container {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .cart-products {
+        min-width: 55%;
+    }
+    
+    .price {
+        width: 15%;
+    }
+    
+    .quantity {
+        width: 15%;
+    }
+
+    .total {
+       width: 15%;
+    }
+
+    .product {
+        min-width: 55%;
+    }
+
+    .subTotalTitle {
+        width: 20%;
+    }
+    
+    .subTotal {
+        width: 15%;
+    }
+}
+
+@media (max-width: 768px) {
+    .cart-container {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .cart-header h5 {
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+    /* .cart-products {
+        min-width: 50%;
+    }
+    
+    .price {
+        width: 15%;
+    }
+    
+    .quantity {
+        width: 20%;
+    }
+
+    .total {
+       width: 15%;
+    } */
+
+    .products img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        margin: 3px;        
+    }
+
+    .price, .quantity, .total {
+        float: right;
+    }
+
+    .product {
+        float: left;
+        width: 50%;
+    }
+    
+    .subTotalContainer h4 {
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .subTotalTitle {
+        width: 20%;
+    }    
+    
+    .subTotal {
+        width: 15%;
+    }
+ 
+    .btn-checkout {
+        font-size: 12px;
+        font-weight: bold;
+        padding: 6px;
+        border-radius: 5px;
+    }
 }
